--- a/styles/index.css
+++ b/styles/index.css
@@ -3,8 +3,10 @@
 
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    display: grid;
+    place-items: center;     /* shorthand for align-items and justify-items */
+    height: 100vh;           /* sets the body height to full viewport height */
+    margin: 0;          
 }
 
 header {
