--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,8 @@
 body {
     font-family: Arial, sans-serif;
        /* sets the body height to full viewport height */
-    margin: 5px;          
+    margin: 5px;      
+    background-color: rgb(46, 45, 45);    
 }
 
 header {
